@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-14
-Date: 2014-02-25
+Date: 2014-02-26
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
